# zerollama

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  go.mod  go.sum  training.py
.github/workflows/: release.yaml
api/: types.go
app/: ollama.iss
app/server/: server.go  server_test.go  server_unix.go  server_windows.go
app/ui/: ui.go
app/updater/: updater_darwin_test.go
cmd/: cmd.go  cmd_launcher_test.go  cmd_test.go
docs/: README.md  ROADMAP.md  cli.mdx  cloud.mdx  context-length.mdx  development.md  docker.mdx  eliza-cloud.md  faq.mdx  gpu-training.md  gpu.mdx  handoff-gpu-training-integration.md  import.mdx  linux.mdx  macos.mdx  modelfile.mdx  multimodal-backends.md  quickstart.mdx  troubleshooting.mdx  video-parity.md  video-understanding.md  windows.mdx
envconfig/: config.go
integration/: create_test.go  utils_test.go
middleware/: openai.go  openai_test.go
openai/: openai.go  openai_test.go  transcription_result_test.go  video_url.go
parser/: parser.go
proto/: training.proto
scripts/: build_darwin.sh  build_windows.ps1  install.sh
server/: cloud_proxy.go  cloud_proxy_test.go  create.go  eliza_catalog.go  eliza_catalog_test.go  images.go  images_test.go  lmstudio_import.go  prompt.go  routes.go  routes_cloud_test.go  routes_create_test.go  routes_generate_test.go  routes_test.go  sched.go  sglang_chat_proxy.go  speech.go  training_api.go  transcription.go
x/trainingdaemon/: README.md  pyproject.toml
x/trainingdaemon/trainingdaemon/: __init__.py  __main__.py  gpu_session.py  server.py  training_pb2.py  training_pb2_grpc.py
(+71 files in other folders)
